Modernize codebase using open-rewrite
Applied rewrite-modernize profile changes:
- Updated test classes to use JUnit 5 best practices
- Optimized Java util API usage
- Upgraded code to Java 17 standards
- Improved Optional handling
- Enhanced Stream API usage
- Updated locale and map handling